--- a/WebRoot/stu/css/common.css
+++ b/WebRoot/stu/css/common.css
@@ -194,7 +194,10 @@ form label.wish-city
 }
 input.generic_time
 {
-	width: 216px;
+	width: 226px;
+	border-radius:4px;
+	border:#A6A6A6 1px solid;
+	background-color:#FAFAFA;
 }
 
 form div#det-elabor {
