update the limit of character

--- a/WebRoot/stu/css/basic.css
+++ b/WebRoot/stu/css/basic.css
@@ -380,3 +380,8 @@ form #expect_city #city input
 	font-size: 16px;
 	color: black;
 }
+label#displayassess,#dispr_content,#dispro_content{
+	font-weight:bold;
+	color:red;
+	vertical-align:bottom;
+}
